# Rectlabel-support

./: README.md  checkIndexColorPalette.py  checkPillowImageMode.py  checkPycocoDemo.py  checkReadCOCOMask.py  coco_json_to_sagemaker_json.py  colabeler2voc.py  convert_csv_to_sframe.py  coreml_yolov3-tiny.py  coreml_yolov3.py  coreml_yolov5.py  create_rectlabel_tf_record.py  dicom_to_images.py  example.csv  general_json2yolo.py  keypoints_order_coco.py  labelme2voc.py  mask2polygons.py  matterport_coco_rectlabel.py  pixels_template.xml  pycocoDemo.py  rectlabel_coco_detectron2.py  rectlabel_coco_matterport.py  rectlabel_create_coco_tf_record.py  rectlabel_create_pascal_tf_record.py  rectlabel_detect_with_tf_model.py  rectlabel_detect_with_tf_model_for_an_image.py  rectlabel_logo.py  rle2polygons.py  settings_labels.json  symbolic_links.sh  toy_pngs_to_xmls.py  train_sframe.py  train_turicreate.py  train_turicreate_recursive.py
VOC2007_test/JPEGImages/annotations/: 1.xml  2.xml
images_test/annotations/: christopher-windus-93178.xml  tuce-311434.xml
notebooks/: train_rf_detr160_instance_segmentation_on_custom_dataset.ipynb  train_rf_detr_instance_segmentation_on_custom_dataset.ipynb  train_rf_detr_object_detection_on_custom_dataset.ipynb  train_yolo26_classification_on_custom_dataset.ipynb  train_yolo26_instance_segmentation_on_custom_dataset.ipynb  train_yolo26_object_detection_on_custom_dataset.ipynb
sam-cpp-macos/: CMakeLists.txt  LICENSE  README.md  sam.cpp  sam.h  test.cpp
sample/annotaitons/: analise-benevides-D1QRlzN58E4-unsplash.txt
